nickName을 nickname으로 변경
